--- a/index.html
+++ b/index.html
@@ -57,6 +57,73 @@
             </div>
         </div>
     </section>
+
+    <section class="container-fluid px-0">
+        <div class="row text-center align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="./imgs/milk.png" alt="candy">
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2 class="">MUSEUM OF CANDY</h2>
+                        <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="lolli icon">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officiis nesciunt fugiat
+                            iste
+                            odit cumque odio blanditiis aperiam eligendi culpa, assumenda a natus, ea voluptatibus
+                            ullam.
+                            Mollitia quaerat quas tempora asperiores repudiandae quis deserunt quae amet ut et ad facere
+                            voluptatum vel non consequatur ratione, ducimus nam aut saepe. Incidunt, pariatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center align-items-center content">
+            <div class="col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2 class="">MUSEUM OF CANDY</h2>
+                        <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="lolli icon">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officiis nesciunt fugiat
+                            iste
+                            odit cumque odio blanditiis aperiam eligendi culpa, assumenda a natus, ea voluptatibus
+                            ullam.
+                            Mollitia quaerat quas tempora asperiores repudiandae quis deserunt quae amet ut et ad facere
+                            voluptatum vel non consequatur ratione, ducimus nam aut saepe. Incidunt, pariatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid" src="./imgs/gumball.png" alt="candy">
+            </div>
+        </div>
+
+        <div class="row text-center align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="./imgs/sprinkles.png" alt="candy">
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2 class="">MUSEUM OF CANDY</h2>
+                        <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="lolli icon">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officiis nesciunt fugiat
+                            iste
+                            odit cumque odio blanditiis aperiam eligendi culpa, assumenda a natus, ea voluptatibus
+                            ullam.
+                            Mollitia quaerat quas tempora asperiores repudiandae quis deserunt quae amet ut et ad facere
+                            voluptatum vel non consequatur ratione, ducimus nam aut saepe. Incidunt, pariatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -68,6 +135,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            })
+        });
+    </script>
 
 </body>
 
